[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/anima/visual-editor/icons/Play.svg" type="Texture" id=1]
[ext_resource path="res://addons/anima/visual-editor/editor/AnimaFrameAnimation.gd" type="Script" id=8]
[ext_resource path="res://addons/anima/visual-editor/property/AnimaPropertyFromTo.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/anima/visual-editor/icons/collapse-left.svg" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.239216, 0.235294, 0.254902, 0.223529 )

[node name="FrameAnimation" type="Control"]
anchor_bottom = 1.0
margin_right = 640.0
rect_min_size = Vector2( 640, 0 )
rect_pivot_offset = Vector2( 316.64, 300 )
rect_clip_content = true
script = ExtResource( 8 )
__meta__ = {
"__initial_min_size:x": 460.0,
"__initial_size:x": 460.0,
"__visibility_strategy": 0,
"_edit_use_anchors_": false,
"_visibility_strategy_reverted": true
}

[node name="Rectangle" type="ColorRect" parent="."]
anchor_bottom = 1.0
margin_right = 640.0
rect_min_size = Vector2( 460, 0 )
rect_pivot_offset = Vector2( 320, 300 )
__meta__ = {
"__visibility_strategy": 0,
"_visibility_strategy_reverted": true
}

[node name="ContentContainer" type="VBoxContainer" parent="Rectangle"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 320, 300 )
custom_constants/separation = 0
__meta__ = {
"__visibility_strategy": 0,
"_visibility_strategy_reverted": true
}

[node name="AnimaRectangle" type="ColorRect" parent="Rectangle/ContentContainer"]
margin_right = 640.0
margin_bottom = 49.0
rect_min_size = Vector2( 0, 49 )
rect_pivot_offset = Vector2( 320, 24.5 )
__meta__ = {
"__visibility_strategy": 0,
"_visibility_strategy_reverted": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="Rectangle/ContentContainer/AnimaRectangle"]
anchor_right = 1.0
rect_pivot_offset = Vector2( 206, 24.5 )
size_flags_horizontal = 3

[node name="FrameName" parent="Rectangle/ContentContainer/AnimaRectangle/HBoxContainer" instance=ExtResource( 9 )]
margin_right = 592.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 142, 19 )
mouse_default_cursor_shape = 1
type = 4
show_relative_selector = false
show_confirm_button = true

[node name="PlayButton" type="ToolButton" parent="Rectangle/ContentContainer/AnimaRectangle/HBoxContainer"]
margin_left = 600.0
margin_right = 640.0
margin_bottom = 49.0
icon = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Rectangle/ContentContainer"]
margin_top = 49.0
margin_right = 640.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 320, 275.5 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"__initial_opacity": 0.0,
"__initial_y": 49.0,
"__visibility_strategy": 0,
"_edit_use_anchors_": false,
"_visibility_strategy_reverted": true
}

[node name="ContentContainer" type="VBoxContainer" parent="Rectangle/ContentContainer/MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 628.0
margin_bottom = 539.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DurationContainer" type="Control" parent="Rectangle/ContentContainer/MarginContainer/ContentContainer"]
margin_right = 616.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
rect_pivot_offset = Vector2( 218, 52.6564 )
rect_clip_content = true
__meta__ = {
"__visibility_strategy": 0
}

[node name="DurationMargin" type="MarginContainer" parent="Rectangle/ContentContainer/MarginContainer/ContentContainer/DurationContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0
rect_pivot_offset = Vector2( 218, 36.5 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 12
custom_constants/margin_bottom = 12
__meta__ = {
"__initial_opacity": 1.0
}

[node name="VBoxContainer" type="VBoxContainer" parent="Rectangle/ContentContainer/MarginContainer/ContentContainer/DurationContainer/DurationMargin"]
margin_top = 12.0
margin_right = 616.0
margin_bottom = 61.0
custom_constants/separation = 12

[node name="GridContainer" type="HBoxContainer" parent="Rectangle/ContentContainer/MarginContainer/ContentContainer/DurationContainer/DurationMargin/VBoxContainer"]
margin_right = 616.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 259.281, -180.348 )
custom_constants/separation = 24

[node name="Label" type="Label" parent="Rectangle/ContentContainer/MarginContainer/ContentContainer/DurationContainer/DurationMargin/VBoxContainer/GridContainer"]
margin_top = 12.0
margin_right = 101.0
margin_bottom = 37.0
custom_colors/font_color = Color( 1, 1, 1, 0.501961 )
text = "Duration:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Duration" parent="Rectangle/ContentContainer/MarginContainer/ContentContainer/DurationContainer/DurationMargin/VBoxContainer/GridContainer" instance=ExtResource( 9 )]
margin_left = 125.0
margin_right = 616.0
margin_bottom = 49.0
show_relative_selector = false

[node name="ScrollContainer" type="ScrollContainer" parent="Rectangle/ContentContainer/MarginContainer/ContentContainer"]
margin_top = 44.0
margin_right = 616.0
margin_bottom = 466.0
rect_pivot_offset = Vector2( 175, 157.5 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 2 )
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationsContainer" type="VBoxContainer" parent="Rectangle/ContentContainer/MarginContainer/ContentContainer/ScrollContainer"]
margin_right = 616.0
margin_bottom = 422.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12

[node name="Empty" type="Control" parent="Rectangle/ContentContainer/MarginContainer/ContentContainer"]
visible = false
margin_top = 448.0
margin_right = 436.0
margin_bottom = 466.0
rect_min_size = Vector2( 0, 18 )
rect_pivot_offset = Vector2( 221, 9.00002 )

[node name="Control" type="Control" parent="Rectangle/ContentContainer/MarginContainer/ContentContainer/Empty"]
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CTAContainer" type="HBoxContainer" parent="Rectangle/ContentContainer/MarginContainer/ContentContainer/Empty/Control"]
anchor_right = 1.0
margin_top = -32.0
margin_bottom = 16.0
custom_constants/separation = 24
alignment = 1

[node name="GenerateFrame" type="Button" parent="Rectangle/ContentContainer/MarginContainer/ContentContainer/Empty/Control/CTAContainer"]
visible = false
margin_left = 102.0
margin_right = 222.0
margin_bottom = 49.0
rect_min_size = Vector2( 120, 49 )
rect_pivot_offset = Vector2( 60, 24.5 )
hint_tooltip = "Add all changes as Animation"
mouse_default_cursor_shape = 2
__meta__ = {
"__visibility_strategy": 0,
"_visibility_strategy_reverted": true
}

[node name="RemoveWrapper" type="HBoxContainer" parent="Rectangle/ContentContainer/MarginContainer/ContentContainer"]
margin_top = 478.0
margin_right = 616.0
margin_bottom = 527.0
rect_pivot_offset = Vector2( 228, 24.5 )
custom_constants/separation = 24
alignment = 1

[node name="AddAnimation" type="Button" parent="Rectangle/ContentContainer/MarginContainer/ContentContainer/RemoveWrapper"]
margin_left = 186.0
margin_right = 273.0
margin_bottom = 49.0
rect_min_size = Vector2( 87, 49 )
rect_pivot_offset = Vector2( 43.5, 24.5 )
mouse_default_cursor_shape = 2

[node name="Delete" type="Button" parent="Rectangle/ContentContainer/MarginContainer/ContentContainer/RemoveWrapper"]
margin_left = 297.0
margin_right = 429.0
margin_bottom = 49.0
rect_min_size = Vector2( 132, 49 )
rect_pivot_offset = Vector2( 60, 17 )
hint_tooltip = "Remove the frame"
mouse_default_cursor_shape = 2

[node name="Collapse" type="Button" parent="."]
anchor_left = 0.844
anchor_right = 0.844
margin_top = 539.0
margin_bottom = 588.0
rect_min_size = Vector2( 49, 49 )
rect_pivot_offset = Vector2( 66, 24.5 )
hint_tooltip = "Remove the frame"
mouse_default_cursor_shape = 2
icon = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FrameCollapsedTitle" type="Label" parent="."]
margin_right = 96.0
margin_bottom = 25.0
rect_rotation = -90.0
text = "Frame01"

[connection signal="item_rect_changed" from="." to="." method="_on_FrameAnimation_item_rect_changed"]
[connection signal="confirmed" from="Rectangle/ContentContainer/AnimaRectangle/HBoxContainer/FrameName" to="." method="_on_FrameName_confirmed"]
[connection signal="pressed" from="Rectangle/ContentContainer/AnimaRectangle/HBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="mouse_entered" from="Collapse" to="." method="_on_Collapse_mouse_entered"]
[connection signal="mouse_exited" from="Collapse" to="." method="_on_Collapse_mouse_exited"]
[connection signal="pressed" from="Collapse" to="." method="_on_Collapse_pressed"]
